--- a/Basic JavaScript-1/html/html.html
+++ b/Basic JavaScript-1/html/html.html
@@ -18,10 +18,10 @@
         <button id="button1" onclick="italic()"> I </button>
         <button id="button2" onclick="underlined()"> U </button>
         <select id="mySelect" onchange="myfunction(this)"; size="1">
-            <option>12px</option>
-            <option>14px</option>
-            <option>16px</option>
-            <option>50px</option>
+            <option value="12px">12</option>
+            <option value="14px">14</option>
+            <option value="16px">16</option>
+            <option value="50px">50</option>
         </select>
         <select id="mySelect2" onchange="myfunction2(this)"; size="1">
             <option>Times New Roman</option>
